--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
     "react-router-dom": "^6.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start"
   }
 }
